# Fortran-CMake

./: CMakeLists.old  CMakeLists.txt  CMakeLists.txt~
.github/workflows/: developer.yml
docs/: CMakeLists.txt  Doxyfile.in
src/: hello.F90  helloworld
tests/: CMakeLists.txt  ref_hello.txt  run_hello_test.sh
